add crio cni plugin

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,6 +5,7 @@ ask_sudo_pass = false
 ask_pass      = false
 remote_user = devops
 #stdout_callback = {{ default | to_nice_yaml }}
+forks          = 3
 
 [privilege_escalation]
 become=True
